tests/NormalTests/paczka1/small_fuzzy/23215323.err
Error in line 1: oIDX4Mlo S880 46,9
Error in line 4: oIDX4Mlo A965 -1,8
Error in line 2: oIDX4Mlo A965 20,2
Error in line 6: oIDX4Mlo A599 83,6
